--- a/index.html
+++ b/index.html
@@ -50,6 +50,42 @@
 
             <button class="absolute btnInElipses">Explore Product</button>
         </section>
+
+        <section class="topBrandsIconContainer">
+            <h2>Trusted by top brands</h2>
+            <div class="iconsContainer">
+                <img src="./images/pirma.svg" alt="">
+                <img src="./images/antra.svg" alt="">
+                <img src="./images/trecia.svg" alt="">
+                <img src="./images/ketvirtas.svg" alt="">
+                <img src="./images/penkta.svg" alt="">
+            </div>
+        </section>
+        <section class="howCollabHelpMainContainer">
+            <h2>How does Collab-app help?</h2>
+            <div class="howHelpContainer">
+                <div class="paraContainer">
+                    <div class="howhelpBtnContainer">
+                        <button>Vendor app</button>
+                        <button>Site Supervisor app</button>
+
+                    </div>
+                    <div class="howHelpAllTextContainer">
+                        <p>Work/Material request: Whenever a client wants to start a work, request notifications with date and time for materials and artisians will be promted through their app.</p>
+                        <p>Project Management: Work on multiple projects...see more</p>
+                        <p>Payment: Get paid for the step by step work...see more</p>
+                        <p>Tutorials: Explore the video tutorials to learn... see more</p>
+                    </div>
+
+
+                </div>
+            </div>
+            <div class="imgContainer">
+                <img src="./images/bigPhone.svg" alt="">
+            </div>
+
+
+        </section>
     </main>
 
 
