--- a/index.html
+++ b/index.html
@@ -71,18 +71,29 @@
 
                     </div>
                     <div class="howHelpAllTextContainer">
-                        <p>Work/Material request: Whenever a client wants to start a work, request notifications with date and time for materials and artisians will be promted through their app.</p>
-                        <p>Project Management: Work on multiple projects...see more</p>
-                        <p>Payment: Get paid for the step by step work...see more</p>
-                        <p>Tutorials: Explore the video tutorials to learn... see more</p>
+                        <p>
+                            <strong>Work/Material request:</strong>
+                            Whenever a client wants to start a work, request notifications with date and time for materials and artisians will be promted through their app.
+                        </p>
+                        <p>
+                            <strong>Project Management: </strong>Work on multiple projects...
+                            <strong>see more</strong>
+                        </p>
+                        <p>
+                            <strong>Payment:</strong> Get paid for the step by step work...<strong>see more</strong>
+                        </p>
+                        <p>
+                            <strong>Tutorials:</strong>Explore the video tutorials to learn... <strong>see more</strong>
+                        </p>
                     </div>
-
-
+                </div>
+                <div class="imgContainer">
+                    <img src="./images/bigPhone.svg" alt="">
                 </div>
             </div>
-            <div class="imgContainer">
+            <!-- <div class="imgContainer">
                 <img src="./images/bigPhone.svg" alt="">
-            </div>
+            </div> -->
 
 
         </section>
