--- a/index.html
+++ b/index.html
@@ -91,9 +91,37 @@
                     <img src="./images/bigPhone.svg" alt="">
                 </div>
             </div>
-            <!-- <div class="imgContainer">
-                <img src="./images/bigPhone.svg" alt="">
-            </div> -->
+        </section>
+
+        <section class="videoMainContainer">
+            <h2>Fastest, Safest & Budget friendly</h2>
+            <p>Managing your projects on spreadsheet or messaging app is a time-taking and inefficient way.They can't link various project data effectively at once place , thus you won't be able to avoid project cost escalation effectively .</p>
+            <iframe width="1060" height="515" src="https://www.youtube.com/embed/cTfsHjCjGkY?si=Pfi-5IQVmUEUdLfp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+        </section>
+
+        <section class="projectDoneContainer">
+            <h2>Projects done on Collab</h2>
+            <div class="projectDoneCardsContainer">
+                <div class="card card1">
+                    <img src="./images/projectDoneImg/Rectangle 2.svg" alt="">
+                    <p>Builders</p>
+                    <span>100+</span>
+                </div>
+                <div class="card card2">
+                    <img src="./images/projectDoneImg/Rectangle 3.svg" alt="">
+                    <p>Contractors</p>
+                    <span>50+</span>
+                </div>
+                <div class="card card3">
+                    <img src="./images/projectDoneImg/Rectangle 4.svg" alt="">
+                    <p>Design Build Firm</p>
+                    <span>30+</span>
+                </div>
+
+
+            </div>
 
 
         </section>
