--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <h4>Basic</h4>
                     <h2>Rs.5000</h2>
                     <button>Request Demo</button>
-                    <ul>
+                    <ul class="bigCardText">
                         <li>Create BoQ</li>
                         <li>Release Purchase Orders</li>
                         <li>Cash flow analysis</li>
@@ -150,7 +150,7 @@
                     <h4>Essential</h4>
                     <h2>Rs.5000</h2>
                     <button>Request Demo</button>
-                    <ul>
+                    <ul class="bigCardText">
                         <li>Create BoQ</li>
                         <li>Release Purchase Orders</li>
                         <li>Cash flow analysis</li>
@@ -161,11 +161,72 @@
                 </div>
                 <div class="bigCard">
                     <h4>Enterprise</h4>
-                    <h2>Contact sales team</h2>
+                    <h2>Contact <br> sales <br> team</h2>
                     <button>Request Demo</button>
                     <p>Unlock the full power to work effectively. Click “Request Demo” now.</p>
                 </div>
             </div>
+
+
+        </section>
+
+        <section class="designationMainContainer">
+            <div>
+                <img src="./images/designationImg/Group 8.png" alt="">
+            </div>
+            <div class="designationParaArrows">
+                <img src="./images/designationImg/ArrowLeft.png" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi, nisl eget tristique molestie. Quisque pharetra tincidunt interdum nunc, ac eget nisi, lectus interdum. Cras aliquet curabitur in morbi facilisi imperdiet non sollicitudin. Molestie volutpat vulputate eu nunc in vulputate sit. Varius neque accumsan libero, augue tortor. Id metus rutrum fringilla nibh neque, at bibendum. Diam libero morbi aliquet mi gravida velit enim.</p>
+                <img src="./images/designationImg/ArrowRight.png" alt="">
+            </div>
+            <div class="designationPara">
+                <img src="./images/designationImg/Ellipse 24.png" alt="">
+                <p>Designation</p>
+            </div>
+
+
+        </section>
+        <section class="exploreOpportunitiesMainContainer">
+            <h2>Join us</h2>
+            <p>At Staart, we’re all about delivering better experiences for our customers. Join our team to make impact on the next billion users in the construction industry</p>
+            <div class="exploreOpportunitiesPictures">
+                <button>Explore Oppurtunities</button>
+                <img class="explore10" src="./images/exploreOpportImg/Vector 1.png" alt="">
+                <img class="explore1" src="./images/exploreOpportImg/Ellipse 16.png" alt="">
+                <img class="explore2" src="./images/exploreOpportImg/Ellipse 17.png" alt="">
+                <img class="explore3" src="./images/exploreOpportImg/Ellipse 18.png" alt="">
+                <img class="explore4" src="./images/exploreOpportImg/Ellipse 19.png" alt="">
+                <img class="explore5" src="./images/exploreOpportImg/Ellipse 20.png" alt="">
+                <img class="explore6" src="./images/exploreOpportImg/Ellipse 21.png" alt="">
+                <img class="explore7" src="./images/exploreOpportImg/Ellipse 22.png" alt="">
+                <img class="explore8" src="./images/exploreOpportImg/Ellipse 23.png" alt="">
+                <img class="explore9" src="./images/exploreOpportImg/You_.png" alt="">
+            </div>
+
+
+
+        </section>
+
+        <section class="collabMainContainer">
+            <h2 class="downloadCollabMobile">Download the Collab mobile apps?</h2>
+            <div class="downloadCollabMobileButton">
+                <button>Try Free Demo</button>
+                <button>Vendor app</button>
+                <button>Site engineer app</button>
+            </div>
+        </section>
+
+
+        <section class="questionMainContainer">
+
+            <div class="stillHaveQuestionContainer">
+                <h2>Still have a question ?</h2>
+                <p>Phanikondru@gmail.com</p>
+                <p>9676989240</p>
+            </div>
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17964.925877394733!2d21.385008473367908!3d55.747805331712556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e4e0340a9ab733%3A0x1c1bfc1e446cd850!2sKvietiniai%2C%20Klaip%C4%97dos%20r.%20sav.!5e0!3m2!1slt!2slt!4v1712913861233!5m2!1slt!2slt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 
 
         </section>
