--- a/index.html
+++ b/index.html
@@ -238,3 +238,9 @@
 </html>
 
 <!-- ul>li*6>a -->
+
+<!-- UL>LI trikampines ikoneles:
+https://css-tricks.com/snippets/css/triangular-list-bullets/ -->
+
+<!-- kai naudojam relative/absoliute teviniam elementui negalima suteikti aukscio ir plocio, tik min-heihgt -->
+<!-- kad nuimti nuo li burbuliukus: list-style-type: none; -->
