--- a/index.html
+++ b/index.html
@@ -8,18 +8,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Collab project</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/main/section1.css">
+    <link rel="stylesheet" href="./css/main/section2.css">
+    <link rel="stylesheet" href="./css/main/section3.css">
+    <link rel="stylesheet" href="./css/main/section4.css">
+    <link rel="stylesheet" href="./css/main/section5.css">
+    <link rel="stylesheet" href="./css/main/section6.css">
+    <link rel="stylesheet" href="./css/main/section7.css">
+    <link rel="stylesheet" href="./css/main/section8.css">
+    <link rel="stylesheet" href="./css/main/section9.css">
+    <link rel="stylesheet" href="./css/main/section10.css">
+
 </head>
 
 <body>
     <header>
-        <div class="purple">India’s first mobile app for construction industry.
-            <span class="learnMore">Learn More</span>
-            <p></p>
+        <div class="purple">
+            <p class="purplePara">India&#8217s first mobile app for construction industry.
+                <span class="learnMore">Learn More</span>
+            </p>
         </div>
         <div class="mainHeaderContainer">
             <img src="./images/logo1.jpg" alt="">
-
             <div class="mainHeaderList">
                 <nav>
                     <ul>
@@ -47,7 +58,6 @@
             <img class="absolute smallElipse" src="./images/smallEllipse 1 (2).svg" alt="">
             <img class="absolute topPhone" src="./images/topPhone.svg" alt="">
             <img class="absolute logoInElipses" src="./images/logo1.jpg" alt="">
-
             <button class="absolute btnInElipses">Explore Product</button>
         </section>
 
@@ -61,6 +71,7 @@
                 <img src="./images/penkta.svg" alt="">
             </div>
         </section>
+
         <section class="howCollabHelpMainContainer">
             <h2>How does Collab-app help?</h2>
             <div class="howHelpContainer">
@@ -68,7 +79,6 @@
                     <div class="howhelpBtnContainer">
                         <button>Vendor app</button>
                         <button>Site Supervisor app</button>
-
                     </div>
                     <div class="howHelpAllTextContainer">
                         <p>
@@ -97,8 +107,6 @@
             <h2>Fastest, Safest & Budget friendly</h2>
             <p>Managing your projects on spreadsheet or messaging app is a time-taking and inefficient way.They can't link various project data effectively at once place , thus you won't be able to avoid project cost escalation effectively .</p>
             <iframe width="1060" height="515" src="https://www.youtube.com/embed/cTfsHjCjGkY?si=Pfi-5IQVmUEUdLfp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-
         </section>
 
         <section class="projectDoneContainer">
@@ -119,11 +127,7 @@
                     <p>Design Build Firm</p>
                     <span>30+</span>
                 </div>
-
-
             </div>
-
-
         </section>
 
         <section class="bigCardContainer">
@@ -166,8 +170,6 @@
                     <p>Unlock the full power to work effectively. Click “Request Demo” now.</p>
                 </div>
             </div>
-
-
         </section>
 
         <section class="designationMainContainer">
@@ -183,9 +185,8 @@
                 <img src="./images/designationImg/Ellipse 24.png" alt="">
                 <p>Designation</p>
             </div>
-
-
         </section>
+
         <section class="exploreOpportunitiesMainContainer">
             <h2>Join us</h2>
             <p>At Staart, we’re all about delivering better experiences for our customers. Join our team to make impact on the next billion users in the construction industry</p>
@@ -202,9 +203,6 @@
                 <img class="explore8" src="./images/exploreOpportImg/Ellipse 23.png" alt="">
                 <img class="explore9" src="./images/exploreOpportImg/You_.png" alt="">
             </div>
-
-
-
         </section>
 
         <section class="collabMainContainer">
@@ -216,20 +214,15 @@
             </div>
         </section>
 
-
         <section class="questionMainContainer">
-
             <div class="stillHaveQuestionContainer">
                 <h2>Still have a question?</h2>
                 <p>Phanikondru@gmail.com</p>
                 <p>9676989240</p>
             </div>
-
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17964.925877394733!2d21.385008473367908!3d55.747805331712556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e4e0340a9ab733%3A0x1c1bfc1e446cd850!2sKvietiniai%2C%20Klaip%C4%97dos%20r.%20sav.!5e0!3m2!1slt!2slt!4v1712913861233!5m2!1slt!2slt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-
-
         </section>
+
     </main>
 
 
