--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Collab project</title>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
@@ -181,36 +183,32 @@
             </div>
         </section>
 
-        <section class="designationMainContainer">
-            <div>
-                <img src="./images/designationImg/Group 8.png" alt="">
+        <section class="starsContainer">
+            <img src="./images/designationImg/Group 8.png" alt="">
+            <div class="starsPara">
+                <p class="review">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi, nisl eget tristique molestie. Quisque pharetra tincidunt interdum nunc, ac eget nisi, lectus interdum. Cras aliquet curabitur in morbi facilisi imperdiet non sollicitudin. Molestie volutpat vulputate eu nunc in vulputate sit. Varius neque accumsan libero, augue tortor. Id metus rutrum fringilla nibh neque, at bibendum. Diam libero morbi aliquet mi gravida velit enim.</p>
             </div>
-            <div class="designationParaArrows">
-                <img src="./images/designationImg/ArrowLeft.png" alt="">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi, nisl eget tristique molestie. Quisque pharetra tincidunt interdum nunc, ac eget nisi, lectus interdum. Cras aliquet curabitur in morbi facilisi imperdiet non sollicitudin. Molestie volutpat vulputate eu nunc in vulputate sit. Varius neque accumsan libero, augue tortor. Id metus rutrum fringilla nibh neque, at bibendum. Diam libero morbi aliquet mi gravida velit enim.</p>
-                <img src="./images/designationImg/ArrowRight.png" alt="">
-            </div>
-            <div class="designationPara">
+            <div class="starsRoundFaceContainer">
                 <img src="./images/designationImg/Ellipse 24.png" alt="">
                 <p>Designation</p>
             </div>
         </section>
 
-        <section class="exploreOpportunitiesMainContainer">
+        <section class="snakeContainer">
             <h2>Join us</h2>
-            <p>At Staart, we’re all about delivering better experiences for our customers. Join our team to make impact on the next billion users in the construction industry</p>
-            <div class="exploreOpportunitiesPictures">
+            <p>At Staart, we&#8217re all about delivering better experiences for our customers. Join our team to make impact on the next billion users in the construction industry</p>
+            <div class="snakeImgContainer">
                 <button>Explore Oppurtunities</button>
-                <img class="explore10" src="./images/exploreOpportImg/Vector 1.png" alt="">
-                <img class="explore1" src="./images/exploreOpportImg/Ellipse 16.png" alt="">
-                <img class="explore2" src="./images/exploreOpportImg/Ellipse 17.png" alt="">
-                <img class="explore3" src="./images/exploreOpportImg/Ellipse 18.png" alt="">
-                <img class="explore4" src="./images/exploreOpportImg/Ellipse 19.png" alt="">
-                <img class="explore5" src="./images/exploreOpportImg/Ellipse 20.png" alt="">
-                <img class="explore6" src="./images/exploreOpportImg/Ellipse 21.png" alt="">
-                <img class="explore7" src="./images/exploreOpportImg/Ellipse 22.png" alt="">
-                <img class="explore8" src="./images/exploreOpportImg/Ellipse 23.png" alt="">
-                <img class="explore9" src="./images/exploreOpportImg/You_.png" alt="">
+                <img class="line" src="./images/exploreOpportImg/Vector 1.png" alt="">
+                <img class="face1" src="./images/exploreOpportImg/Ellipse 16.png" alt="">
+                <img class="face2" src="./images/exploreOpportImg/Ellipse 17.png" alt="">
+                <img class="face3" src="./images/exploreOpportImg/Ellipse 18.png" alt="">
+                <img class="face4" src="./images/exploreOpportImg/Ellipse 19.png" alt="">
+                <img class="face5" src="./images/exploreOpportImg/Ellipse 20.png" alt="">
+                <img class="face6" src="./images/exploreOpportImg/Ellipse 21.png" alt="">
+                <img class="face7" src="./images/exploreOpportImg/Ellipse 22.png" alt="">
+                <img class="face8" src="./images/exploreOpportImg/Ellipse 23.png" alt="">
+                <img class="you" src="./images/exploreOpportImg/You_.png" alt="">
             </div>
         </section>
 
