--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="./css/main/section8.css">
     <link rel="stylesheet" href="./css/main/section9.css">
     <link rel="stylesheet" href="./css/main/section10.css">
+    <link rel="stylesheet" href="./css/main/section11.css">
 
 </head>
 
@@ -229,10 +230,59 @@
             </div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17964.925877394733!2d21.385008473367908!3d55.747805331712556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e4e0340a9ab733%3A0x1c1bfc1e446cd850!2sKvietiniai%2C%20Klaip%C4%97dos%20r.%20sav.!5e0!3m2!1slt!2slt!4v1712913861233!5m2!1slt!2slt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
-
     </main>
+    <footer>
+        <section class="footerContainer">
+            <div class="socialMediaContainer">
+                <div class="socialMedia">
+                    <img class="footerLogo" src="./images/footerImg/Collab.png" alt="">
+                    <p class="footerText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra faucibus facilisis sem eget sed amet consectetur tincidunt mauris.</p>
+                    <p class="footerFollow">Follow us on:</p>
+                    <div class="socialMediaIcons">
+                        <img src="./images/footerImg/Facebook Icon undefined.png" alt="">
+                        <img src="./images/footerImg/LinkedIn Icon undefined.png" alt="">
+                        <img src="./images/footerImg/Instagram Icon undefined.png" alt="">
+                        <img src="./images/footerImg/YouTube Icon undefined.png" alt="">
 
+                    </div>
+                </div>
+            </div>
+            <div class="footerTableContainer">
+                <table>
+                    <thead>
+                        <th>Company</th>
+                        <th>Recources</th>
+                        <th>Legal</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>About</td>
+                            <td>Blog</td>
+                            <td>Terms of Service</td>
+                        </tr>
+                        <tr>
+                            <td>Product</td>
+                            <td></td>
+                            <td>Privacy Policy</td>
+                        </tr>
+                        <tr>
+                            <td>Team</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="footerTableContactUs">
+                    <p>Contact Us at:</p>
+                    <span>phanikondru@gmail.com</span>
+                </div>
+            </div>
+        </section>
 
+        <section class="lastLine">
+            <span>@2022 Collab | All Rights Reserved</span>
+        </section>
+    </footer>
 </body>
 
 </html>
