--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
             <button>Request Demo</button>
         </section>
         <section class="elipsesContainer">
-            <img class="absolute bigElipse" src="./images/Big.svg" alt="">
-            <img class="absolute smallElipse" src="./images/smallEllipse 1 (2).svg" alt="">
-            <img class="absolute topPhone" src="./images/topPhone.svg" alt="">
-            <img class="absolute logoInElipses" src="./images/logo1.jpg" alt="">
+            <img class="absolute bigElipse" src="./images/Big.svg" alt="bigElipse photo">
+            <img class="absolute smallElipse" src="./images/smallEllipse 1 (2).svg" alt="smallElipse photo">
+            <img class="absolute topPhone" src="./images/topPhone.svg" alt="topPhone photo">
+            <img class="absolute logoInElipses" src="./images/logo1.jpg" alt="logoInElipses photo">
             <button class="absolute btnInElipses">Explore Product</button>
         </section>
 
         <section class="topBrandsIconContainer">
             <h2>Trusted by top brands</h2>
             <div class="iconsContainer">
-                <img src="./images/pirma.svg" alt="">
-                <img src="./images/antra.svg" alt="">
-                <img src="./images/trecia.svg" alt="">
-                <img src="./images/ketvirtas.svg" alt="">
-                <img src="./images/penkta.svg" alt="">
+                <img src="./images/pirma.svg" alt="firstIcon">
+                <img src="./images/antra.svg" alt="secondIcon">
+                <img src="./images/trecia.svg" alt="thirdIcon">
+                <img src="./images/ketvirtas.svg" alt="fourthIcon">
+                <img src="./images/penkta.svg" alt="fifthIcon">
             </div>
         </section>
 
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="imgContainer">
-                    <img src="./images/bigPhone.svg" alt="">
+                    <img src="./images/bigPhone.svg" alt="bigPhoneImg">
                 </div>
             </div>
         </section>
@@ -125,17 +125,17 @@
             <h2>Projects done on Collab</h2>
             <div class="projectDoneCardsContainer">
                 <div class="card card1">
-                    <img src="./images/projectDoneImg/Rectangle 2.svg" alt="">
+                    <img src="./images/projectDoneImg/Rectangle 2.svg" alt="builders image">
                     <p>Builders</p>
                     <span>100+</span>
                 </div>
                 <div class="card card2">
-                    <img src="./images/projectDoneImg/Rectangle 3.svg" alt="">
+                    <img src="./images/projectDoneImg/Rectangle 3.svg" alt="contractors image">
                     <p>Contractors</p>
                     <span>50+</span>
                 </div>
                 <div class="card card3">
-                    <img src="./images/projectDoneImg/Rectangle 4.svg" alt="">
+                    <img src="./images/projectDoneImg/Rectangle 4.svg" alt="design built firm image">
                     <p>Design Build Firm</p>
                     <span>30+</span>
                 </div>
@@ -185,12 +185,12 @@
         </section>
 
         <section class="starsContainer">
-            <img src="./images/designationImg/Group 8.png" alt="">
+            <img src="./images/designationImg/Group 8.png" alt="stars image">
             <div class="starsPara">
                 <p class="review">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi, nisl eget tristique molestie. Quisque pharetra tincidunt interdum nunc, ac eget nisi, lectus interdum. Cras aliquet curabitur in morbi facilisi imperdiet non sollicitudin. Molestie volutpat vulputate eu nunc in vulputate sit. Varius neque accumsan libero, augue tortor. Id metus rutrum fringilla nibh neque, at bibendum. Diam libero morbi aliquet mi gravida velit enim.</p>
             </div>
             <div class="starsRoundFaceContainer">
-                <img src="./images/designationImg/Ellipse 24.png" alt="">
+                <img src="./images/designationImg/Ellipse 24.png" alt="face image">
                 <p>Designation</p>
             </div>
         </section>
@@ -200,16 +200,16 @@
             <p>At Staart, we&#8217re all about delivering better experiences for our customers. Join our team to make impact on the next billion users in the construction industry</p>
             <div class="snakeImgContainer">
                 <button>Explore Oppurtunities</button>
-                <img class="line" src="./images/exploreOpportImg/Vector 1.png" alt="">
-                <img class="face1" src="./images/exploreOpportImg/Ellipse 16.png" alt="">
-                <img class="face2" src="./images/exploreOpportImg/Ellipse 17.png" alt="">
-                <img class="face3" src="./images/exploreOpportImg/Ellipse 18.png" alt="">
-                <img class="face4" src="./images/exploreOpportImg/Ellipse 19.png" alt="">
-                <img class="face5" src="./images/exploreOpportImg/Ellipse 20.png" alt="">
-                <img class="face6" src="./images/exploreOpportImg/Ellipse 21.png" alt="">
-                <img class="face7" src="./images/exploreOpportImg/Ellipse 22.png" alt="">
-                <img class="face8" src="./images/exploreOpportImg/Ellipse 23.png" alt="">
-                <img class="you" src="./images/exploreOpportImg/You_.png" alt="">
+                <img class="line" src="./images/exploreOpportImg/Vector 1.png" alt="face1 image">
+                <img class="face1" src="./images/exploreOpportImg/Ellipse 16.png" alt="face2 image">
+                <img class="face2" src="./images/exploreOpportImg/Ellipse 17.png" alt="face3 image">
+                <img class="face3" src="./images/exploreOpportImg/Ellipse 18.png" alt="face4 image">
+                <img class="face4" src="./images/exploreOpportImg/Ellipse 19.png" alt="face5 image">
+                <img class="face5" src="./images/exploreOpportImg/Ellipse 20.png" alt="face6 image">
+                <img class="face6" src="./images/exploreOpportImg/Ellipse 21.png" alt="face7 image">
+                <img class="face7" src="./images/exploreOpportImg/Ellipse 22.png" alt="face8 image">
+                <img class="face8" src="./images/exploreOpportImg/Ellipse 23.png" alt="face9 image">
+                <img class="you" src="./images/exploreOpportImg/You_.png" alt="image you">
             </div>
         </section>
 
@@ -235,14 +235,14 @@
         <section class="footerContainer">
             <div class="socialMediaContainer">
                 <div class="socialMedia">
-                    <img class="footerLogo" src="./images/footerImg/Collab.png" alt="">
+                    <img class="footerLogo" src="./images/footerImg/Collab.png" alt="logo image">
                     <p class="footerText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra faucibus facilisis sem eget sed amet consectetur tincidunt mauris.</p>
                     <p class="footerFollow">Follow us on:</p>
                     <div class="socialMediaIcons">
-                        <img src="./images/footerImg/Facebook Icon undefined.png" alt="">
-                        <img src="./images/footerImg/LinkedIn Icon undefined.png" alt="">
-                        <img src="./images/footerImg/Instagram Icon undefined.png" alt="">
-                        <img src="./images/footerImg/YouTube Icon undefined.png" alt="">
+                        <img src="./images/footerImg/Facebook Icon undefined.png" alt="facebook icon">
+                        <img src="./images/footerImg/LinkedIn Icon undefined.png" alt="linkedin icon">
+                        <img src="./images/footerImg/Instagram Icon undefined.png" alt="instagram icon">
+                        <img src="./images/footerImg/YouTube Icon undefined.png" alt="youtube icon">
 
                     </div>
                 </div>
